# micrograd-ad

./: .gitignore  LICENSE  MLP.hs  Makefile  README.md  backprop-plot-anim.py  default.nix  gradient-plot.py  matplotlib_2-setup.cfg  matplotlib_2.nix  micrograd-ad.cabal  micrograd-ad.hs  moons-plot.py  neural-network-diagram.asy
