cabal-version: 1.12
name:           micrograd-ad
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/bitonic/micrograd-ad#readme>
homepage:       https://github.com/bitonic/micrograd-ad#readme
bug-reports:    https://github.com/bitonic/micrograd-ad/issues
author:         Francesco Mazzoli
maintainer:     f@mazzo.li
copyright:      (c) Francesco Mazzoli
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/bitonic/micrograd-ad

executable micrograd-ad
  main-is: micrograd-ad.hs
  other-modules: MLP
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ad
    , base >=4.7 && <5
    , diagrams
    , mwc-random
    , vector
    , text
    , directory
  default-language: Haskell2010

